--- a/src/js/component/TodoList.module.css
+++ b/src/js/component/TodoList.module.css
@@ -3,13 +3,14 @@
     justify-content: center;
     align-items: center;
     text-align: center;
+    
   
 
 }
 
 .container{
     width: 500px;
-    background: #c2c2c2;
+    background: #17a2b8;
     color: #333;
     border-radius: 10px;
     
@@ -17,16 +18,14 @@
 }
 
 .input{
-    width: 80%;
+    width: 75%;
+    margin-right: 10px;
 }
 
-
-.divItem {
-    max-width: 100px;
-    width: 80%;
-    white-space: break-word;
-  }
-
-  .divBotonDelet{
-    width: 100%;
+  .liList{
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: baseline;
+  
   }
