--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -13,7 +13,7 @@
 
 body {
   margin: 0;
-  overflow: hidden; /* Evita el desplazamiento vertical cuando se aplica el desenfoque */
+  /* overflow: hidden; Evita el desplazamiento vertical cuando se aplica el desenfoque */
   position: relative; /* Permite que el pseudo-elemento esté posicionado en relación con el cuerpo */
   font-family: "Josefin Sans", sans-serif;
 }
@@ -35,6 +35,7 @@ body::before {
 div{
     padding: 5px 10px 5px 5px;
     margin: 2px;
+    border-radius: 10px;
     /* border-style: solid;
     border-color: black; */
 }
